--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <link rel="stylesheet" href="main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Agbalumo&family=Bungee&family=Kenia&family=Roboto&display=swap" rel="stylesheet">
     <title>Game Shop - A sua loja de games</title>
 </head>
 <body>
     <header>
         <div class="container">
-            <h1>Games Shop</h1>
+            <h1>Ricardo Moreno Santos</h1>
             <nav>
                 <ul>
                     <li>
@@ -27,19 +27,31 @@
     </header>
     <section id="about">
         <div class="container">
-            <img class="store-front" src="images/loja.jpg" alt="Fachada da Loja Games Shop">
+            <img class="store-front" src="images/perfil.jpg" alt="Fachada da Loja Games Shop">
             <div>
-                <h2>Sobre a loja</h2>
+                <h2>Sobre Mim</h2>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita aspernatur voluptates blanditiis totam, est voluptas corporis laudantium delectus, quia atque dolores fuga omnis dolor aliquam, reiciendis ex esse! Ab, ea?
+                    👨‍💻 Desenvolvedor Apaixonado pela Inovação 👩‍💻
                 </p>
                 <p>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quasi doloremque non voluptates fuga adipisci iste quo dolor! Enim mollitia eveniet, dolore est, vero unde doloremque cumque eius veritatis nisi a!
+                    ❤️Sou um apaixonado por programação e tecnologia, dedicado a transformar linhas de código em soluções inovadoras. 
                 </p>
+                <p> 
+                🚀 Habilidades: Desenvolvedor Back-end.
+                </p>
+                <p>
+                📚 Aprendizado Contínuo: Nunca paro de explorar novas tecnologias e aprimorar minhas habilidades.
+                </p>
+                <p>
+                💬 Vamos Conectar: Estou sempre aberto a trocar ideias e expandir minha rede de contatos.
+                </p>
+
+                </br>
+
                 <ul class="brands-list">
-                    <li><img src="images/nintendo.png" alt="Nintendo"></li>
-                    <li><img src="images/xbox.png" alt="XBox"></li>
-                    <li><img src="images/playstation.png" alt="Playstation"></li>
+                    <li><img src="images/html.png" alt="HTML"></li>
+                    <li><img src="images/css.png" alt="CSS"></li>
+                    <li><img src="images/js.webp" alt="JS"></li>
                 </ul>
             </div>
         </div>
@@ -52,27 +64,27 @@
                     <h3>Fale conosco</h3>
                     <form>
                         <input type="text" placeholder="Seu Nome" required>
-                        <input type="email" placeholder="Seu e-mail" required>
+                        <input type="email" placeholder="Seu E-mail" required>
                         <input type="tel" placeholder="Seu Telefone (Opcional)">
                         <textarea placeholder="Sua Mensagem" required></textarea>
                         <button type="submit">Enviar</button>
                     </form>
                 </div>
                 <div>
-                    <h3>Nos acompanhe</h3>
+                    <h3>Fique Ligado Nos Meus Conteúdos</h3>
                     <ul class="social-links">
                         <li>
-                            <a href="#" title="Siga-nos no Instagram">
+                            <a href="#" title="Siga-me">
                                 <img src="images/instagram.png" alt="Logo do Instagram">
                             </a>
                         </li>
                         <li>
-                            <a href="#" title="Siga-nos no Facebook">
+                            <a href="#" title="Siga-me">
                                 <img src="images/facebook.png" alt="Logo do Facebook">
                             </a>
                         </li>
                         <li>
-                            <a href="#" title="Visite nosso canal no YouTube">
+                            <a href="#" title="Meus Conteúdos">
                                 <img src="images/youtube.png" alt="Logo do YouTube">
                             </a>
                         </li>
